git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@3196 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/pom.xml
+++ b/pom.xml
@@ -76,5 +76,15 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>fr.ign.cogit</groupId>
+    	<artifactId>cogit-sig3d</artifactId>
+    	<version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>fr.ign.cogit</groupId>
+    	<artifactId>geoxygene-geopensim</artifactId>
+    	<version>1.6-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
