descriptionn+ develeopper dans le pom
git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@3233 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,28 @@
   <artifactId>simplu3d</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>simplu3d</name>
+  <description>Algorithmes 3D internes au laboratoire </description>
   <url>http://maven.apache.org</url>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <developers>
+		<developer>
+			<id>mbrasbin</id>
+			<name>Mickael Brasebin</name>
+			<email>mickael.brasebin(at)ign.fr</email>
+			<organization>Laboratoire COGIT, IGN</organization>
+			<organizationUrl>http://recherche.ign.fr</organizationUrl>
+			<roles>
+				<role>Administrator</role>
+				<role>Doctorant</role>
+				<role>Java Developer</role>
+			</roles>
+		</developer>
+	</developers>
+  
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <testSourceDirectory>src/test/java</testSourceDirectory>
