--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>library</artifactId>
-    <groupId>fr.ign.cogit</groupId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>fr.ign.cogit</groupId>
-  <artifactId>simplu3d</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>simplu3d</name>
-  <description>Algorithmes 3D internes au laboratoire </description>
-  <url>http://maven.apache.org</url>
-  
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
-  <developers>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>library</artifactId>
+		<groupId>fr.ign.cogit</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>fr.ign.cogit</groupId>
+	<artifactId>simplu3d</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>simplu3d</name>
+	<description>Algorithmes 3D internes au laboratoire </description>
+	<url>http://maven.apache.org</url>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<developers>
 		<developer>
 			<id>mbrasbin</id>
 			<name>Mickael Brasebin</name>
@@ -32,144 +33,379 @@
 			</roles>
 		</developer>
 	</developers>
-  
-  <build>
-    <sourceDirectory>src/main/java</sourceDirectory>
-    <testSourceDirectory>src/test/java</testSourceDirectory>
-    <resources>
-        <resource>
-            <directory>src/main/resources</directory>
-        </resource>
-    </resources>
-    <testResources>
-      <testResource>
-            <directory>src/test/resources</directory>
-      </testResource>
-    </testResources>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.3.2</version>
-            <configuration>
-                <compilerVersion>1.6</compilerVersion>
-                <source>1.6</source>
-                <complianceLevel>1.6</complianceLevel>
-                <target>1.6</target>
-                <includes>
-                    <include>**/*</include>
-                </includes>
-                <excludes>
-                </excludes>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-resources-plugin</artifactId>
-            <version>2.4.3</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>resources</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-            <version>2.1.2</version>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.3</version>
-        </plugin>
-    </plugins>
-  </build>
-   <repositories>
-    <repository>
-      <id>mvnRepository</id>
-      <name>mvnRepository</name>
-      <url>http://repo1.maven.org/maven2/</url>
-    </repository>
-        <repository>
-      <id>jarvana</id>
-      <name>jarvana</name>
-      <url>http://www.jarvana.com/jarvana/browse/</url>
-    </repository>	
-    </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>fr.ign.cogit</groupId>
-    	<artifactId>cogit-sig3d</artifactId>
-    	<version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>fr.ign.cogit</groupId>
-    	<artifactId>geoxygene-geopensim</artifactId>
-    	<version>1.6-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-  <groupId>org.antlr</groupId>
-  <artifactId>stringtemplate</artifactId>
-  <version>3.2.1</version>
-</dependency>
-<dependency>
-  <groupId>org.antlr</groupId>
-  <artifactId>antlr</artifactId>
-  <version>3.2</version>
-</dependency>
-<dependency>
-	<groupId>commons-lang</groupId>
-	<artifactId>commons-lang</artifactId>
-	<version>2.3</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.core</groupId>
-	<artifactId>org.eclipse.core.resources</artifactId>
-	<version>3.6.0.v20100526-0737</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.core</groupId>
-	<artifactId>org.eclipse.core.runtime</artifactId>
-	<version>3.6.0.v20100505</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.emf</groupId>
-	<artifactId>org.eclipse.emf.common</artifactId>
-	<version>2.6.0.v20100614-1136</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.emf</groupId>
-	<artifactId>org.eclipse.emf.ecore</artifactId>
-	<version>2.6.0.v20100614-1136</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.emf</groupId>
-	<artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
-	<version>2.5.0.v20100521-1847</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.emf</groupId>
-	<artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
-	<version>2.5.0.v20100521-1847</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.equinox</groupId>
-	<artifactId>org.eclipse.equinox.common</artifactId>
-	<version>3.6.0.v20100503</version>
-</dependency>
-<dependency>
-	<groupId>org.eclipse.osgi</groupId>
-	<artifactId>org.eclipse.osgi</artifactId>
-	<version>3.6.0.v20100517</version>
-</dependency>
-  </dependencies>
+
+	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
+		</testResources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<compilerVersion>1.6</compilerVersion>
+					<source>1.6</source>
+					<complianceLevel>1.6</complianceLevel>
+					<target>1.6</target>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<excludes>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>resources</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3</version>
+			</plugin>
+		</plugins>
+	</build>
+	<repositories>
+		<repository>
+			<id>mvnRepository</id>
+			<name>mvnRepository</name>
+			<url>http://repo1.maven.org/maven2/</url>
+		</repository>
+		<repository>
+			<id>jarvana</id>
+			<name>jarvana</name>
+			<url>http://www.jarvana.com/jarvana/browse/</url>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr</artifactId>
+			<version>3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>org.eclipse.core.resources</artifactId>
+			<version>3.6.0.v20100526-0737</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>org.eclipse.core.runtime</artifactId>
+			<version>3.6.0.v20100505</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.common</artifactId>
+			<version>2.6.0.v20100614-1136</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.ecore</artifactId>
+			<version>2.6.0.v20100614-1136</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.mapping.ecore.xmi</artifactId>
+			<version>2.5.0.v20100521-1847</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
+			<version>2.5.0.v20100521-1847</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>org.eclipse.equinox.common</artifactId>
+			<version>3.6.0.v20100503</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.osgi</groupId>
+			<artifactId>org.eclipse.osgi</artifactId>
+			<version>3.6.0.v20100517</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.osgi</groupId>
+			<artifactId>util</artifactId>
+			<version>3.6.0.v20100517</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>uml2</artifactId>
+			<version>1.5.0.v201005031530</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.uml2</groupId>
+			<artifactId>common</artifactId>
+			<version>1.5.0.v201005031530</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.uml2.uml</groupId>
+			<artifactId>resources</artifactId>
+			<version>3.1.0.v201005031530</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.uml2</groupId>
+			<artifactId>uml</artifactId>
+			<version>3.1.0.v201006071150</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.uml2.uml</groupId>
+			<artifactId>resources</artifactId>
+			<version>3.1.0.v201006071150</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>uml2</artifactId>
+			<version>3.0.0.v201005031530</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>xsd</artifactId>
+			<version>2.6.0.v20100614-1136</version>
+		</dependency>
+		<dependency>
+			<groupId>org.emftext</groupId>
+			<artifactId>access</artifactId>
+			<version>1.2.0.201009131109</version>
+		</dependency>
+		<dependency>
+			<groupId>org.emftext.commons</groupId>
+			<artifactId>antlr3</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kiama</groupId>
+			<artifactId>attribution</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>scala</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20</groupId>
+			<artifactId>logging</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.essentialocl</groupId>
+			<artifactId>standardlibrary</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot</groupId>
+			<artifactId>essentialocl</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.examples</groupId>
+			<artifactId>pml</artifactId>
+			<version>3.1.0.201101171055</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.examples</groupId>
+			<artifactId>simple</artifactId>
+			<version>3.1.0.201101171055</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot</groupId>
+			<artifactId>interpreter</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.language.ocl.resource</groupId>
+			<artifactId>ocl</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.language.ocl</groupId>
+			<artifactId>semantics</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.language.ocl</groupId>
+			<artifactId>staticsemantics</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.language</groupId>
+			<artifactId>ocl</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
+			<artifactId>ecore</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
+			<artifactId>java</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
+			<artifactId>uml2</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
+			<artifactId>xsd</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.modelinstancetype</groupId>
+			<artifactId>ecore</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.modelinstancetype</groupId>
+			<artifactId>java</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.modelinstancetype</groupId>
+			<artifactId>xml</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot</groupId>
+			<artifactId>modelinstancetype</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot</groupId>
+			<artifactId>modelinstance</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot</groupId>
+			<artifactId>model</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot</groupId>
+			<artifactId>parser</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.pivotmodel</groupId>
+			<artifactId>semantics</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot</groupId>
+			<artifactId>pivotmodel</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.standalone</groupId>
+			<artifactId>facade</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.standardlibrary</groupId>
+			<artifactId>java</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools.codegen.declarativ</groupId>
+			<artifactId>ocl2sql</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools.codegen</groupId>
+			<artifactId>declarativ</artifactId>
+			<version>3.0.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools.codegen.ocl2java</groupId>
+			<artifactId>types</artifactId>
+			<version>3.0.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools.codegen</groupId>
+			<artifactId>ocl2java</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools</groupId>
+			<artifactId>codegen</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools</groupId>
+			<artifactId>CWM</artifactId>
+			<version>3.0.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools.template</groupId>
+			<artifactId>sql</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools</groupId>
+			<artifactId>template</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools.transformation</groupId>
+			<artifactId>pivot2sql</artifactId>
+			<version>3.0.0.201101171054</version>
+		</dependency>
+		<dependency>
+			<groupId>tudresden.ocl20.pivot.tools</groupId>
+			<artifactId>transformation</artifactId>
+			<version>3.1.0.201101171054</version>
+		</dependency>
+				<dependency>
+			<groupId>fr.ign.cogit</groupId>
+			<artifactId>cogit-sig3d</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.ign.cogit</groupId>
+			<artifactId>geoxygene-geopensim</artifactId>
+			<version>1.6-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
