--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<compilerVersion>1.6</compilerVersion>
-					<source>1.6</source>
-					<complianceLevel>1.6</complianceLevel>
-					<target>1.6</target>
+					<compilerVersion>1.7</compilerVersion>
+					<source>1.7</source>
+					<complianceLevel>1.7</complianceLevel>
+					<target>1.7</target>
 					<includes>
 						<include>**/*</include>
 					</includes>
@@ -86,6 +86,23 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3</version>
 			</plugin>
+		<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.8</version>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+     			 <excludeTransitive>false</excludeTransitive>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 		</plugins>
 	</build>
 	<repositories>
@@ -93,11 +110,6 @@
 			<id>mvnRepository</id>
 			<name>mvnRepository</name>
 			<url>http://repo1.maven.org/maven2/</url>
-		</repository>
-		<repository>
-			<id>jarvana</id>
-			<name>jarvana</name>
-			<url>http://www.jarvana.com/jarvana/browse/</url>
 		</repository>
 	</repositories>
 	<dependencies>
