--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,17 @@
 	<artifactId>simplu3d</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>simplu3d</name>
-	<description>Algorithmes 3D internes au laboratoire </description>
+
+
+	<packaging>jar</packaging>
+
+	<scm>
+		<connection>scm:svn:https://dionysos2.ign.fr/src/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d/</connection>
+		<url>https://dionysos2.ign.fr/src/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d/</url>
+	</scm>
+
+
+	<description>Implémentation d'un module de gestion des règles d'urbanisme </description>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -35,6 +45,7 @@
 	</developers>
 
 	<build>
+		<finalName>Simplu3D_${project.version}</finalName>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<resources>
@@ -83,35 +94,52 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.2</version>
+				<configuration>
+					<!-- Specifies the configuration file of the assembly plugin -->
+					<descriptors>
+						<descriptor>src/main/assembly/assembly.xml</descriptor>
+					</descriptors>
+					<outputDirectory>${project.build.directory}</outputDirectory>
+				</configuration>
 			</plugin>
-		<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.8</version>
-        <executions>
-          <execution>
-            <id>copy-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <configuration>
-     			 <excludeTransitive>false</excludeTransitive>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>fr.ign.cogit.simplu3d.exec.GTRU3D</mainClass>
+						</manifest>
+					</archive>
+					<outputDirectory>${project.build.directory}</outputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.5.1</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<prependGroupId>true</prependGroupId>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>mvnRepository</id>
-			<name>mvnRepository</name>
-			<url>http://repo1.maven.org/maven2/</url>
-		</repository>
-	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -134,7 +162,7 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.3</version>
 		</dependency>
- 	<dependency>
+		<dependency>
 			<groupId>org.eclipse.core</groupId>
 			<artifactId>org.eclipse.core.resources</artifactId>
 			<version>3.6.0.v20100526-0737</version>
@@ -408,8 +436,8 @@
 			<groupId>tudresden.ocl20.pivot.tools</groupId>
 			<artifactId>transformation</artifactId>
 			<version>3.1.0.201101171054</version>
-		</dependency> 
-				<dependency>
+		</dependency>
+		<dependency>
 			<groupId>fr.ign.cogit</groupId>
 			<artifactId>cogit-sig3d</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -418,6 +446,19 @@
 			<groupId>fr.ign.cogit</groupId>
 			<artifactId>geoxygene-geopensim</artifactId>
 			<version>1.6-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>ojb</artifactId>
+					<groupId>org.apache</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>fr.ign</groupId>
+			<artifactId>librjmcmc4j</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
