git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@4073 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logging level is info, and we're using two logging targets
-log4j.rootLogger=TRACE, fichier, console
+log4j.rootLogger=ERROR, fichier, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE} %5p (%F:%M:%L) - %m%n
@@ -14,7 +14,7 @@ log4j.appender.fichier.MaxFileSize=50MB
 # Keep ten backup files
 log4j.appender.fichier.MaxBackupIndex=10
 log4j.appender.fichier.Append=false
-log4j.appender.fichier.Threshold=TRACE
+log4j.appender.fichier.Threshold=ERROR
 
 log4j.logger.fr.ign.cogit.geoxygene.spatial.coordgeom.GM_Envelope=INFO
 log4j.logger.tudresden.ocl20.pivot=ERROR
