git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@4279 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,20 @@
 					</configuration>
 				</plugin>
 			</plugins>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration> 
+					<environmentVariables> 
+						<PATH>${basedir}\lib\native_libraries\windows-amd64\</PATH> 
+					</environmentVariables> 
+				</configuration> 
+			</plugin>
+			
 		</pluginManagement>
+		
+		
 
 	</build>
 
