--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,11 @@
 			<version>3.2</version>
 		</dependency>
 		<dependency>
+			<groupId>java3d</groupId>
+			<artifactId>vecmath</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.3</version>
