new maven repository
git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@4522 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<name>simplu3d</name>
 
 	<scm>
-		<connection>scm:svn:https://dionysos2.ign.fr/src/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d/</connection>
-		<url>https://dionysos2.ign.fr/src/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d/</url>
+		<connection>scm:svn:https://forge-cogit/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d/</connection>
+		<url>https://forge-cogit/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d/</url>
 	</scm>
 
 	<description>Implémentation d'un module de gestion des règles d'urbanisme </description>
@@ -191,12 +191,24 @@
 		<repository>
 			<id>cogit-snapshots</id>
 			<name>Cogit Snapshots Repository</name>
-			<url>https://dionysos2.ign.fr/nexus-webapp-1.4.1/content/repositories/snapshots/</url>
+			<url>https://forge-cogit.ign.fr/nexus/content/repositories/snapshots/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>cogit-releases</id>
 			<name>Cogit Releases Repository</name>
-			<url>https://cogit-services.ign.fr/nexus-webapp-1.4.1/content/repositories/releases/</url>
+			<url>https://forge-cogit.ign.fr/nexus/content/repositories/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>Imagej</id>
