git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@4556 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,11 @@
 
 
 	<dependencies>
+	<dependency>
+	  <groupId>org.eclipse.core</groupId>
+ 	 <artifactId>org.eclipse.core.runtime</artifactId>
+ 	 <version>3.6.0.v20100505</version>
+	</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
