--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,5 @@
 # Root logging level is info, and we're using two logging targets
-log4j.rootLogger=warn, fichier, console
+log4j.rootLogger=ERROR, fichier, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE} %5p (%F:%M:%L) - %m%n
@@ -16,5 +16,5 @@ log4j.appender.fichier.MaxBackupIndex=10
 log4j.appender.fichier.Append=false
 log4j.appender.fichier.Threshold=trace
 
-log4j.logger.fr.ign.cogit.geoxygene.spatial.coordgeom.GM_Envelope=INFO
+log4j.logger.fr.ign.cogit.geoxygene.spatial.coordgeom.GM_Envelope=ERROR
 log4j.logger.tudresden.ocl20.pivot.interpreter=ERROR
