--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,14 @@
 			</testResource>
 		</testResources>
 		<plugins>
-		<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration> 
-					<environmentVariables> 
-						<PATH>${basedir}\lib\native_libraries\windows-amd64\</PATH> 
-					</environmentVariables> 
-				</configuration> 
+				<configuration>
+					<environmentVariables>
+						<PATH>${basedir}\lib\native_libraries\windows-amd64\</PATH>
+					</environmentVariables>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -141,6 +141,20 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.5.2</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Import-Package>*</Import-Package>
+						<Export-Package>org.mycompany.myproject.*</Export-Package>
+						<Embed-Dependency>*;scope=!provided;inline=true</Embed-Dependency>
+						<Embed-Transitive>true</Embed-Transitive>
+					</instructions>
+				</configuration>
+			</plugin>
 		</plugins>
 
 		<pluginManagement>
@@ -170,12 +184,12 @@
 					</configuration>
 				</plugin>
 			</plugins>
-			
-			
-			
+
+
+
 		</pluginManagement>
-		
-		
+
+
 
 	</build>
 
@@ -227,11 +241,11 @@
 
 
 	<dependencies>
-	<dependency>
-	  <groupId>org.eclipse.core</groupId>
- 	 <artifactId>org.eclipse.core.runtime</artifactId>
- 	 <version>3.6.0.v20100505</version>
-	</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>org.eclipse.core.runtime</artifactId>
+			<version>3.6.0.v20100505</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -588,7 +602,7 @@
 			<artifactId>cogit-sig3d</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>fr.ign.cogit</groupId>
 			<artifactId>geoxygene-geopensim</artifactId>
 			<version>1.7-SNAPSHOT</version>
