git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@5176 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/pom.xml
+++ b/pom.xml
@@ -605,7 +605,7 @@
 		<dependency>
 			<groupId>fr.ign.cogit</groupId>
 			<artifactId>geoxygene-geopensim</artifactId>
-			<version>1.7-SNAPSHOT</version>
+			<version>1.6</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>ojb</artifactId>
