- split of simplu3d between simplu3d and simplu3d-rule to separate rule manager and building simulator
git-svn-id: https://forge-cogit.ign.fr/cogit-depot/geoxygene-cogit/trunk/modules/library/simplu3d@5209 67b3e15a-eb92-4fe2-b8f7-2fed31984fbb

--- a/pom.xml
+++ b/pom.xml
@@ -242,376 +242,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.core</groupId>
-			<artifactId>org.eclipse.core.runtime</artifactId>
-			<version>3.6.0.v20100505</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>stringtemplate</artifactId>
-			<version>3.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>antlr</artifactId>
-			<version>3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>java3d</groupId>
-			<artifactId>vecmath</artifactId>
-			<version>1.5.2</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.common</artifactId>
-			<version>2.6.0.v20100614-1136</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore</artifactId>
-			<version>2.6.0.v20100614-1136</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.mapping.ecore.xmi</artifactId>
-			<version>2.5.0.v20100521-1847</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/org.eclipse.emf.mapping.ecore.xmi-2.5.0.v20100521-1847.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
-			<version>2.5.0.v20100521-1847</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>org.eclipse.equinox.common</artifactId>
-			<version>3.6.0.v20100503</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.osgi</groupId>
-			<artifactId>org.eclipse.osgi</artifactId>
-			<version>3.6.0.v20100517</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.osgi</groupId>
-			<artifactId>util</artifactId>
-			<version>3.1.200-v20070605</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.uml2</groupId>
-			<artifactId>org.eclipse.uml2.uml</artifactId>
-			<version>3.1.0.v201006071150</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.uml2</groupId>
-			<artifactId>org.eclipse.uml2.uml.resources</artifactId>
-			<version>3.1.0.v201005031530</version>
-		</dependency>
-		<!-- <dependency> <groupId>org.eclipse</groupId> <artifactId>uml2</artifactId> 
-			<version>3.0.0.v201005031530</version> </dependency> -->
-
-		<dependency>
-			<groupId>org.emftext</groupId>
-			<artifactId>access</artifactId>
-			<version>1.2.0.201009131109</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/org.emftext.access_1.2.0.201009131109.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.emftext.commons</groupId>
-			<artifactId>antlr3</artifactId>
-			<version>2_0_1.0.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/org.emftext.commons.antlr3_2_0_1.0.0.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.kiama</groupId>
-			<artifactId>attribution</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/org.kiama.attribution_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<!-- <dependency> <groupId>org.scala-lang</groupId> <artifactId>scala-library</artifactId> 
-			<version>2.10.2</version> </dependency> -->
-		<dependency>
-			<groupId>scala-library</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>0.1</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/scala-library-0.1.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20</groupId>
-			<artifactId>logging</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.logging_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.essentialocl</groupId>
-			<artifactId>standardlibrary</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.essentialocl.standardlibrary_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot</groupId>
-			<artifactId>essentialocl</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.essentialocl_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.examples</groupId>
-			<artifactId>pml</artifactId>
-			<version>3.1.0.201101171055</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.examples.pml_3.1.0.201101171055.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.examples</groupId>
-			<artifactId>simple</artifactId>
-			<version>3.1.0.201101171055</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.examples.simple_3.1.0.201101171055.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot</groupId>
-			<artifactId>interpreter</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.interpreter_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.language.ocl.resource</groupId>
-			<artifactId>ocl</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.language.ocl.resource.ocl_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.language.ocl</groupId>
-			<artifactId>semantics</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.language.ocl.semantics_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.language.ocl</groupId>
-			<artifactId>staticsemantics</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.language.ocl.staticsemantics_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.language</groupId>
-			<artifactId>ocl</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.language.ocl_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
-			<artifactId>ecore</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.metamodels.ecore_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
-			<artifactId>java</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.metamodels.java_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
-			<artifactId>uml2</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.metamodels.uml2_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.metamodels</groupId>
-			<artifactId>xsd</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.metamodels.xsd_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot</groupId>
-			<artifactId>model</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.model_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot</groupId>
-			<artifactId>modelinstance</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.modelinstance_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.modelinstancetype</groupId>
-			<artifactId>ecore</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.modelinstancetype.ecore_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.modelinstancetype</groupId>
-			<artifactId>java</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.modelinstancetype.java_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.modelinstancetype</groupId>
-			<artifactId>xml</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.modelinstancetype.xml_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot</groupId>
-			<artifactId>modelinstancetype</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.modelinstancetype_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot</groupId>
-			<artifactId>parser</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.parser_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.pivotmodel</groupId>
-			<artifactId>semantics</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.pivotmodel.semantics_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot</groupId>
-			<artifactId>pivotmodel</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.pivotmodel_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.standalone</groupId>
-			<artifactId>facade</artifactId>
-			<version>3.1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.standalone.facade_3.1.0.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.standardlibrary</groupId>
-			<artifactId>java</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.standardlibrary.java_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools.codegen.declarativ</groupId>
-			<artifactId>ocl2sql</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.codegen.declarativ.ocl2sql_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools.codegen</groupId>
-			<artifactId>declarativ</artifactId>
-			<version>3.0.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.codegen.declarativ_3.0.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools.codegen.ocl2java</groupId>
-			<artifactId>types</artifactId>
-			<version>3.0.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.codegen.ocl2java.types_3.0.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools.codegen</groupId>
-			<artifactId>ocl2java</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.codegen.ocl2java_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools</groupId>
-			<artifactId>codegen</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.codegen_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools</groupId>
-			<artifactId>CWM</artifactId>
-			<version>3.0.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.CWM_3.0.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools.template</groupId>
-			<artifactId>sql</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.template.sql_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools</groupId>
-			<artifactId>template</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.template_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools.transformation</groupId>
-			<artifactId>pivot2sql</artifactId>
-			<version>3.0.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.transformation.pivot2sql_3.0.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>tudresden.ocl20.pivot.tools</groupId>
-			<artifactId>transformation</artifactId>
-			<version>3.1.0.201101171054</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/tudresden.ocl20.pivot.tools.transformation_3.1.0.201101171054.jar</systemPath>
-		</dependency>
-		<dependency>
 			<groupId>fr.ign.cogit</groupId>
-			<artifactId>cogit-sig3d</artifactId>
+			<artifactId>simplu3d-rules</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.ign.cogit</groupId>
-			<artifactId>geoxygene-geopensim</artifactId>
-			<version>1.6</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>ojb</artifactId>
-					<groupId>org.apache</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>fr.ign</groupId>
