--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,12 @@
 
 
 	<dependencies>
+	    <dependency>
+			<groupId>campskeleton</groupId>
+			<artifactId>campskeleton</artifactId>
+			<version>6.0</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>fr.ign.cogit</groupId>
 			<artifactId>simplu3d-rules</artifactId>
@@ -251,6 +257,11 @@
 			<artifactId>librjmcmc4j</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
+		</dependency>
+		<dependency>
+		<groupId>fr.ign.cogit</groupId>
+	<artifactId>cogit-sig3d</artifactId>
+	<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
