--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=ERROR, fichier, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE} %5p (%F:%M:%L) - %m%n
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.Threshold=DEBUG
+log4j.appender.console.Threshold=FATAL
     
 log4j.appender.fichier=org.apache.log4j.RollingFileAppender
 log4j.appender.fichier.File=log4j.log
