--- a/pom.xml
+++ b/pom.xml
@@ -170,13 +170,7 @@
 					</configuration>
 				</plugin>
 			</plugins>
-
-
-
 		</pluginManagement>
-
-
-
 	</build>
 	<profiles>
 		<!-- Tests under Linux 32bits -->
@@ -341,6 +335,12 @@
 			<groupId>fr.ign.cogit</groupId>
 			<artifactId>simplu3d-rules</artifactId>
 			<version>1.0-SNAPSHOT</version>
+			<exclusions>
+			<exclusion>
+			<groupId>fr.ign.cogit</groupId>
+			<artifactId>geoxygene-util</artifactId>
+			</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>fr.ign</groupId>
