--- a/pom.xml
+++ b/pom.xml
@@ -127,17 +127,9 @@
 				<version>2.5.1</version>
 				<executions>
 					<execution>
-					<!-- 
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<prependGroupId>true</prependGroupId>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-						</configuration>
-					 -->
+						<!-- <id>copy-dependencies</id> <phase>package</phase> <goals> <goal>copy-dependencies</goal> 
+							</goals> <configuration> <prependGroupId>true</prependGroupId> <outputDirectory>${project.build.directory}/lib</outputDirectory> 
+							</configuration> -->
 					</execution>
 				</executions>
 			</plugin>
@@ -336,10 +328,22 @@
 			<artifactId>simplu3d-rules</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<exclusions>
-			<exclusion>
-			<groupId>fr.ign.cogit</groupId>
-			<artifactId>geoxygene-util</artifactId>
-			</exclusion>
+				<exclusion>
+					<groupId>fr.ign.cogit</groupId>
+					<artifactId>geoxygene-util</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>jama</groupId>
+					<artifactId>jama</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.xml.bind</groupId>
+					<artifactId>jaxb-xjc</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -364,17 +368,10 @@
 			<name>Nexus Snapshots Repository</name>
 			<url>https://forge-cogit.ign.fr/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
-	<!--	<repository>
-			<id>iscpif-ign-releases</id>
-			<name>ISCPIF Release repository for IGN</name>
-			<url>http://maven.iscpif.fr/ign-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>iscpif-ign-snapshots</id>
-			<name>ISCPIF Snapshot repository for IGN</name>
-			<url>http://maven.iscpif.fr/ign-snapshots/</url>
-		</snapshotRepository> -->
+		<!-- <repository> <id>iscpif-ign-releases</id> <name>ISCPIF Release repository 
+			for IGN</name> <url>http://maven.iscpif.fr/ign-releases/</url> </repository> 
+			<snapshotRepository> <id>iscpif-ign-snapshots</id> <name>ISCPIF Snapshot 
+			repository for IGN</name> <url>http://maven.iscpif.fr/ign-snapshots/</url> 
+			</snapshotRepository> -->
 	</distributionManagement>
-	
-	
 </project>
