--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
 				<configuration>
 					<environmentVariables>
 						<PATH>${basedir}\lib\native_libraries\windows-amd64\</PATH>
@@ -326,10 +327,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>campskeleton</groupId>
+			<groupId>twak</groupId>
 			<artifactId>campskeleton</artifactId>
-			<version>6.0</version>
-			<scope>compile</scope>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>fr.ign.cogit</groupId>
